fix: plus looked goofy on mobile

--- a/packages/frontend/src/components/Buttons/ReportButton/ReportButton.css
+++ b/packages/frontend/src/components/Buttons/ReportButton/ReportButton.css
@@ -10,6 +10,14 @@
     border: 2px solid var(--color-white);
 }
 
+.report-button .plus {
+    position: relative;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-left: 10px;
+}
+
 .report-button .plus span {
     position: absolute;
     background-color: var(--color-white);
@@ -17,17 +25,17 @@
 }
 
 .report-button .plus span:first-child {
-    height: 3px;
-    width: 20px;
-    left: 25%;
-    top: 48%;
-    transform: translateY(-50%);
+    height: 2px;
+    width: 14px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .report-button .plus span:last-child {
-    width: 3px;
-    height: 20px;
-    top: 25%;
-    left: 52%;
-    transform: translateX(-50%);
+    width: 2px;
+    height: 14px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
